# fujitsu

./: lesson10_quantum_proof.py  lesson10b_corrected_proof.py  lesson1_test.py  lesson2_qubo_manual.py  lesson3_raw_qaoa.py  lesson4_ortools_benchmark.py  lesson5_tokyo_data.py  lesson6_10qubit_vrp.py  lesson7_full10qubit_vrp.py  lesson8_champion_vrp.py  lesson9_40qubit_fujitsu.py  tokyo_demands.npy  tokyo_distances.npy  tokyo_route_map.html  tokyo_timewindows.npy
fujitsu-vrp/: CLAUDE.md  PLANS.md  pyproject.toml
fujitsu-vrp/config/: default.yaml
fujitsu-vrp/src/fujitsu_vrp/: __init__.py
fujitsu-vrp/src/fujitsu_vrp/analysis/: __init__.py  risk_metrics.py  stability.py
fujitsu-vrp/src/fujitsu_vrp/classical/: __init__.py  lns_base.py  ortools_solver.py
fujitsu-vrp/src/fujitsu_vrp/data/: __init__.py  geospatial.py  problem_builder.py  synthetic_generator.py
fujitsu-vrp/src/fujitsu_vrp/experiments/: __init__.py  benchmark.py
fujitsu-vrp/src/fujitsu_vrp/quantum/: __init__.py
fujitsu-vrp/tests/: __init__.py  test_core.py
logistic-u/: Dockerfile.arm64  README.md  pyproject.toml  requirements.txt
logistic-u/docs/: final_presentation.md  qarp_feedback.md
logistic-u/docs/planning/: implementation_plan.md  phase2_plan.md  task_tracker.md  walkthrough.md
logistic-u/notebooks/: 00_complete_pipeline.py  01_qubo_formulation.ipynb  02_baby_steps_5qubit.ipynb  quantum_fuji.ipynb  quantum_fuji_rena.ipynb
logistic-u/src/: __init__.py  benchmark.py  dashboard.py
logistic-u/src/analysis/: penalty_tuning.py
logistic-u/src/data/: __init__.py  tokyo_generator.py
logistic-u/src/data/datasets/: shibuya_10stops.json  (+2 more)
logistic-u/src/qubo/: __init__.py  encodings.py  penalty_calibration.py  vrp_qubo.py
logistic-u/src/routing/: __init__.py  rerouter.py  traffic_dynamics.py  traffic_sim.py
logistic-u/src/solvers/: __init__.py  circuit_cutting.py  classical_baseline.py  grover_solver.py  hybrid_solver.py  qaoa_solver.py  qarp_integration.py
logistic-u/src/visualization/: __init__.py
logistic-u/tests/: test_grover.py  test_penalty_tuning.py  test_phase2.py  test_phase4.py  test_qubo.py  test_solvers.py
(+16 files in other folders)
