[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fujitsu-vrp"
version = "0.1.0"
description = "Quantum-enhanced Vehicle Routing Problem solver for Tokyo SME delivery"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Fujitsu VRP Challenge Team"}
]
keywords = ["quantum", "vrp", "optimization", "logistics", "annealing"]

dependencies = [
    # Core
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",

    # Classical Optimization
    "ortools>=9.8",

    # Quantum Computing - Gate-based
    "qiskit>=1.0",
    "qiskit-algorithms>=0.3",
    "qiskit-optimization>=0.6",

    # Quantum Annealing
    "dwave-neal>=0.6",
    "dimod>=0.12",

    # Fast local simulation
    "qulacs>=0.6",

    # Geospatial
    "geopy>=2.4",
    "shapely>=2.0",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Config
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "jupyter>=1.0",
]

[project.scripts]
fujitsu-vrp = "fujitsu_vrp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fujitsu_vrp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]