[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tokyo-vrp-quantum"
version = "0.1.0"
description = "Quantum-Enhanced Vehicle Routing for Tokyo SME Delivery Fleets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
